--- a/app/src/index.css
+++ b/app/src/index.css
@@ -1,3 +1,7 @@
+* {
+  outline: none;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -35,3 +39,4 @@ input::placeholder {
   font-size: 15px;
   color: white;
 }
+
