--- a/app/src/index.css
+++ b/app/src/index.css
@@ -1,72 +1,176 @@
 * {
-  outline: none;
+    outline: none;
 }
 
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background-color: #1a2029 !important;
-  /*background-image: url("../src/Assets/Image/background.jpg") !important;*/
-  /*background-position: top !important;*/
-  /*background-size: cover !important;*/
-  /*background-repeat: no-repeat !important;*/
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    background-color: #1a2029 !important;
+    /*background-image: url("../src/Assets/Image/background.jpg") !important;*/
+    /*background-position: top !important;*/
+    /*background-size: cover !important;*/
+    /*background-repeat: no-repeat !important;*/
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
-input{
-  width: 200px;
-  background-color: rgba(0, 0, 0, -0.5) !important;
+input {
+    width: 200px;
+    background-color: rgba(0, 0, 0, -0.5) !important;
 }
 
 input::placeholder {
-  opacity: 0.8;
-  color: #9ca7be;
-  font-family: Nunito, sans-serif;
-  font-size: 14px;
-  font-weight: 400;
-  letter-spacing: 0.14px;
+    opacity: 0.8;
+    color: #9ca7be;
+    font-family: Nunito, sans-serif;
+    font-size: 14px;
+    font-weight: 400;
+    letter-spacing: 0.14px;
 }
 
 .ui.icon.input > i.icon:not(.link) {
-  font-size: 15px;
-  color: white;
+    font-size: 15px;
+    color: white;
 }
 
 .ui.input.focus > input, .ui.input > input:focus {
-  color: white !important;
+    color: white !important;
 }
 
 .title {
-  margin: 100px 0
+    margin: 100px 0
 }
 
 svg {
-  display: flex;
-  justify-content: center;
-  align-items: flex-end;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
 }
 
 .CardItem:hover {
-  background-color: #212734;
-  padding: unset !important;
-  /*transition: all ease-in 0.05s;*/
+    background-color: #212734;
+    padding: unset !important;
+    /*transition: all ease-in 0.05s;*/
 }
 
 /*.CardItem:first-child:hover {*/
 /*  padding: 30px;*/
 /*}*/
 
-.CardItem:hover  .chartjs-render-monitor{
-  width: 313px !important;
+.CardItem:hover .chartjs-render-monitor {
+    width: 313px !important;
 }
-.CardItem:hover  .chartBox_text{
-  padding: 30px 0 0 30px;
+
+.CardItem:hover .chartBox_text {
+    padding: 30px 0 0 30px;
+}
+
+.CardItem:before {
+    position: absolute;
+    content: '';
+    width: 14px;
+    height: 2px;
+    background: #737c8f;
+    bottom: -1px;
+    right: -8px;
+    z-index: 10;
+}
+
+.CardItem:after {
+    position: absolute;
+    content: '';
+    width: 2px;
+    height: 14px;
+    background: #737c8f;
+    bottom: -8px;
+    right: -1.5px;
+    z-index: 10;
+}
+
+
+.NewsItem:hover {
+    background-color: #212734;
+    padding: 30px 60px 42px 30px !important;
+    transition: ease 0.1s;
+}
+
+.NewsItem:before {
+    position: absolute;
+    content: '';
+    width: 14px;
+    height: 2px;
+    background: #737c8f;
+    bottom: -1px;
+    right: -8px;
+    z-index: 10;
+}
+
+.NewsItem:after {
+    position: absolute;
+    content: '';
+    width: 2px;
+    height: 8px;
+    background: #737c8f;
+    bottom: 0;
+    right: -1.5px;
+    z-index: 10;
+}
+
+.NewsItemBox:before {
+    position: absolute;
+    content: '';
+    width: 14px;
+    height: 2px;
+    background: #737c8f;
+    bottom: 0;
+    right: -8px;
+    z-index: 10;
+    top: 39px;
+}
+
+.NewsItemBox:after {
+    position: absolute;
+    content: '';
+    width: 2px;
+    height: 8px;
+    background: #737c8f;
+    bottom: 0;
+    right: -1.5px;
+    top: 40px;
+    z-index: 10;
+}
+
+.ui.toggle.checkbox input:focus:checked ~ .box:before, .ui.toggle.checkbox input:focus:checked ~ label:before {
+    background-color: red !important;
+}
+
+.ui.checkbox .box:before, .ui.checkbox label:before {
+    left: -3px !important;
+}
+
+.ui.toggle.checkbox .box:before, .ui.toggle.checkbox label:before {
+    border: 1.5px solid #737aff !important;
+    width: 3.9rem !important;
+    height: 1.9rem !important;
+}
+
+.ui.toggle.checkbox input ~ .box:after, .ui.toggle.checkbox input ~ label:after {
+    border: 1.5px solid #737aff !important;
+    left: 0.10rem;
+    background-color: #737aff;
+    top: 3px;
+}
+
+.spanHover:hover {
+    color: #f86b85 !important;
+    cursor: pointer;
+    text-decoration: underline;
+    line-height: 20px !important;
 }
